map styling moved to main.css

--- a/myapp/client/main.css
+++ b/myapp/client/main.css
@@ -2,3 +2,8 @@ body {
   padding: 10px;
   font-family: sans-serif;
 }
+
+#map {
+	height: 575px;  /* The height is 400 pixels */
+	width: 100%;  /* The width is the width of the web page */
+}
