First/Last name form working

--- a/myapp/imports/ui/components/info/info.html
+++ b/myapp/imports/ui/components/info/info.html
@@ -4,15 +4,11 @@
       <h1>Hosts</h1>
 
       <form class="new-host">
-        <input type="text" name="title" placeholder="First Name">
+        <input type="text" name="firstName" placeholder="First Name">
+        <input type="text" name="lastName" placeholder="Last Name">
         <input type="submit" value="Submit">
       </form>
     </header>
-    <ul>
-      {{#each hosts}}
-        {{> host}}
-      {{/each}}
-    </ul>
   </div>
   <li>{{title}}</li>
 </template>
