--- a/myapp/imports/ui/components/info/info.html
+++ b/myapp/imports/ui/components/info/info.html
@@ -6,6 +6,11 @@
       <form class="new-host">
         <input type="text" name="firstName" placeholder="First Name">
         <input type="text" name="lastName" placeholder="Last Name">
+        <input type="text" name="street" placeholder="Street Address">
+        <input type="text" name="city" placeholder="City">
+        <input type="text" name="state" placeholder="State">
+        <input type="text" name="zip" placeholder="Zip Code">
+        <input type="text" name="phone" placeholder="Phone Number">
         <input type="submit" value="Submit">
       </form>
     </header>
