--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -195,7 +195,7 @@
 					</li>
 				{{/each}} -->
 			{{#each hosts}}
-				<li>{{title}}</li>
+				<li>{{firstName}}</li>
 			{{/each}}
 			<!--</ul>
 		</div>
