--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -178,7 +178,7 @@
 					<button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchBarButton">Search</button>
 				</form>
 			</ul>
-			<a class="nav-link disabled" href="/BecomeAHost">About</a>
+			<a class="nav-link disabled" href="/BecomeAHost">Become A Host</a>
 		</div>
 	</nav>
 </template>
