--- a/myapp/imports/ui/components/info/info.html
+++ b/myapp/imports/ui/components/info/info.html
@@ -11,7 +11,7 @@
         <input type="text" name="state" placeholder="State">
         <input type="text" name="zip" placeholder="Zip Code">
         <input type="text" name="phone" placeholder="Phone Number">
-        <input type="submit" value="Submit">
+        <input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Submit">
       </form>
     </header>
   </div>
