--- a/myapp/imports/ui/components/hostForm/hostForm.html
+++ b/myapp/imports/ui/components/hostForm/hostForm.html
@@ -1,8 +1,8 @@
-<template name="info">
+<template name="hostForm">
 	<div class="container">
 		<header>
 			<br>
-			<h1>Become A Host</h1>
+			<h1>Become a Host</h1>
 			<br>
 			<form class="new-host">
 				<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" name="firstName" placeholder="First Name">
@@ -21,10 +21,12 @@
 				<br>
 				<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" name="phone" placeholder="Phone Number">
 				<br>
-				<label class="form-check-label">
-					<input class="form-check-input" type="checkbox" id="blankCheckbox" value="option1"> 
-					<span class="custom-control-description">I agree to the OpenSpace <a href="https://docs.google.com/document/d/1OFSiaaVMH3tK4i9il-WKZA5pSKRYM9TBqL8ArS5tf_g/edit#heading=h.9afqyu86ca3f" target="_blank">Terms and Conditions</a></span>
-				</label>
+				<div class="checkbox_container">
+					<label class="form-check-label">
+						<input class="form-check-input" type="checkbox" id="blankCheckbox" value="option1"> 
+						<span class="custom-control-description">I agree to the OpenSpace <a href="https://docs.google.com/document/d/1OFSiaaVMH3tK4i9il-WKZA5pSKRYM9TBqL8ArS5tf_g/edit#heading=h.9afqyu86ca3f" target="_blank">Terms and Conditions</a></span>
+					</label>
+				</div>
 				<br>
 				<br>
 				<input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Submit">
