Full data displayed in hello

--- a/myapp/imports/ui/stylesheets/hostForm.css
+++ b/myapp/imports/ui/stylesheets/hostForm.css
@@ -1,9 +1,9 @@
-.checkbox_container {
+/*.checkbox_container {
   float: right;
   margin: left 20%;
   /*content:"*" ;
   color:red   
-*/}
+}*/
 
 h1 {
     color: blue;
