spaceType and Email working in form

--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -188,7 +188,7 @@
 		<div class="col-md-6">
 			<ul class="list-group">
 			{{#each hosts}}
-				<li class="list-group-item">{{firstName}} {{lastName}}<br>{{street}}, {{city}}, {{state}} {{zip}} <br> {{email}} {{phone}}</li>
+				<li class="list-group-item">{{firstName}} {{lastName}}<br>{{street}}, {{city}}, {{state}} {{zip}} <br>{{email}} {{phone}}<br>{{spaceType}}</li>
 			{{/each}}
 			</ul>
 		</div>
