spaceAvailable added to form

--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -212,7 +212,7 @@
 								</div>
 								<div class="row">
 									<div class="col-sm">
-										<i class="fas fa-adjust"></i> 80sqft remaining
+										<i class="fas fa-adjust"></i> {{spaceAvailable}} sq. ft remaining
 									</div>
 									<div class="col-sm">
 										<i class="fas fa-check-circle"></i> OpenSpace Verified
