--- a/myapp/imports/ui/components/hostForm/hostForm.html
+++ b/myapp/imports/ui/components/hostForm/hostForm.html
@@ -23,6 +23,8 @@
 				<br>
 				<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" name="spaceType" placeholder="Type of Space (Garage, Closet, etc.)">
 				<br>
+				<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" name="spaceAvailable" placeholder="Space Available (in square feet)">
+				<br>
 <!-- 				<div class="checkbox_container">
 					<label class="form-check-label">
 						<input class="form-check-input" type="checkbox" id="blankCheckbox" value="option1"> 
