--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -1,169 +1,3 @@
-<template name="hello">
-	<div class="modal-body row">
-		<div class="col-md-6">
-			<!-- Your first column here -->
-			<ul class="list-group">
-				<li class="list-group-item">
-					<div class="media">
-						<img class="mr-3" src="/images/SampleLayout1.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-						<div class="media-body">
-							<h5 class="mt-0">0.4 miles away</h5>
-							<div class="container">
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-map-marked-alt"></i> Kingswood Drive
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-home"></i> Empty Garage
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-dollar-sign"></i> .05$/sqInch
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-adjust"></i> 50sqft remaining
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-check-circle"></i> OpenSpace Verified
-									</div>
-								</div>
-							</div>
-						</div>
-						<button type="button" class="btn btn-primary">Book</button>
-					</div>
-				</li>
-				<li class="list-group-item">
-					<div class="media">
-						<img class="mr-3" src="/images/SampleLayout2.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-						<div class="media-body">
-							<h5 class="mt-0">1.2 miles away</h5>
-							<div class="container">
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-map-marked-alt"></i> Alexander Ave
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-home"></i> Empty Living Room
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-dollar-sign"></i> .08$/sqInch
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-adjust"></i> 120sqft remaining
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-check-circle"></i> OpenSpace Verified
-									</div>
-								</div>
-							</div>
-						</div>
-						<button type="button" class="btn btn-primary">Book</button>
-					</div>
-				</li>
-				<li class="list-group-item">
-					<div class="media">
-						<img class="mr-3" src="/images/SampleLayout3.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-						<div class="media-body">
-							<h5 class="mt-0">1.7 miles away</h5>
-							<div class="container">
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-map-marked-alt"></i> Erwin Road
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-home"></i> Partially Filled Garage
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-dollar-sign"></i> .06$/sqInch
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-adjust"></i> 80sqft remaining
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-check-circle"></i> OpenSpace Verified
-									</div>
-								</div>
-							</div>
-						</div>
-						<button type="button" class="btn btn-primary">Book</button>
-					</div>
-				</li>
-				<li class="list-group-item">
-					<div class="media">
-						<img class="mr-3" src="/images/SampleLayout4.png" alt="Generic placeholder image" style="width: 100px; height: 100px;">
-						<div class="media-body">
-							<h5 class="mt-0">2.4 miles away</h5>
-							<div class="container">
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-map-marked-alt"></i> Ninth Street
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-home"></i> Small Closet
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-dollar-sign"></i> .04$/sqInch
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-clock"></i> 8:00AM - 12:00PM (Monday-Friday)
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm">
-										<i class="fas fa-adjust"></i> 25sqft remaining
-									</div>
-									<div class="col-sm">
-										<i class="fas fa-check-circle"></i> OpenSpace Verified
-									</div>
-								</div>
-							</div>
-						</div>
-						<button type="button" class="btn btn-primary">Book</button>
-					</div>
-				</li>
-			</ul>
-		</div>
-		<div class="col-md-6">
-			<!-- Your second column here -->
-			<div id="map"></div>
-			<script>
-			// Initialize and add the map
-			function initMap() {
-					// The location of Uluru
-					var uluru = {lat:35.9940, lng:-78.8986};
-					// The map, centered at Uluru
-					var map = new google.maps.Map(
-						document.getElementById('map'), {zoom: 12, center: uluru});
-					// The marker, positioned at Uluru
-					var marker = new google.maps.Marker({position: uluru, map: map});
-				}
-			</script>
-		</div>
-	</div>
-</template>
-
 <template name ="navbar">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">OpenSpace</a>
@@ -184,7 +18,6 @@
 </template>
 
 <template name="list_items">
-	<div class="modal-body row">
 		<div class="col-md-6">
 			<ul class="list-group">
 			{{#each hosts}}
@@ -226,5 +59,24 @@
 			{{/each}}
 			</ul>
 		</div>
-	</div> 
+</template>
+
+<template name = "map">
+	<div class = "col-md-6">
+		<div id = "map"></div>
+		{<script>
+		  // Initialize and add the map
+		          function initMap() {
+		            // The location of Uluru
+		            var uluru = {lat:35.9940, lng:-78.8986};
+		            // The map, centered at Uluru
+		            var map = new google.maps.Map(
+		              document.getElementById('map'), {zoom: 12, center: uluru});
+		            // The marker, positioned at Uluru
+		            var marker = new google.maps.Marker({position: uluru, map: map});
+		          }
+		        </script>}
+	</div>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbsJ9CgLB2PFRo1-RgSlgahriiL5eNwro&callback=initMap" 
+    type="text/javascript"></script>
 </template>
