Final for HackDuke submission

--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -220,7 +220,7 @@
 								</div>
 							</div>
 						</div>
-						<button type="button" class="btn btn-primary">Book</button>
+						<a href="/BookASpace"><button type="button" class="btn btn-primary">Book</button></a>
 					</div>
 				</li>
 			{{/each}}
