--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -64,7 +64,7 @@
 <template name = "map">
 	<div class = "col-md-6">
 		<div id = "map"></div>
-		{<script>
+		<script>
 		  // Initialize and add the map
 		          function initMap() {
 		            // The location of Uluru
@@ -75,7 +75,7 @@
 		            // The marker, positioned at Uluru
 		            var marker = new google.maps.Marker({position: uluru, map: map});
 		          }
-		        </script>}
+		</script>
 	</div>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbsJ9CgLB2PFRo1-RgSlgahriiL5eNwro&callback=initMap" 
     type="text/javascript"></script>
