--- a/myapp/imports/ui/components/hostForm/hostForm.html
+++ b/myapp/imports/ui/components/hostForm/hostForm.html
@@ -33,7 +33,7 @@
 				</div>
 				<br>
 				<br>
-				<input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Submit" http-equiv="refresh" content="0; URL='localhost:3000'">
+				<input class="btn btn-outline-success my-2 my-sm-0" type="submit" value="Submit">
 			</form>
 		</header>
 	</div>
