--- a/myapp/imports/ui/stylesheets/hello.css
+++ b/myapp/imports/ui/stylesheets/hello.css
@@ -2,3 +2,6 @@
 	height: 575px;  /* The height is 400 pixels */
 	width: 100%;  /* The width is the width of the web page */
 }
+img {
+	height: 60px;
+}
