--- a/myapp/imports/ui/components/hello/hello.html
+++ b/myapp/imports/ui/components/hello/hello.html
@@ -1,7 +1,7 @@
 <template name ="navbar">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">OpenSpace</a>
-		<!-- <img src="/images/OpenSpaceLogo.png" alt="OpenSpaceLogo"> -->
+<!-- 		<a class="navbar-brand" href="#">OpenSpace</a> -->
+		<img class="navbar-brand" src="/images/OpenSpaceLogo.png" alt="OpenSpaceLogo">
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
